Update content and structure for About, Review, and Services pages; enhance CSS styles for buttons and links.

--- a/client/css/about.css
+++ b/client/css/about.css
@@ -110,6 +110,11 @@ body {
   color: #2475f7;
 }
 
+.get-started-btn a {
+  color: #fff;
+  text-decoration: none;
+}
+
 /* Hamburger Icon */
 .menu-icon {
   display: none;
