--- a/client/css/register.css
+++ b/client/css/register.css
@@ -109,7 +109,10 @@ body {
   background-color: #fff;
   color: #2475f7;
 }
-
+.get-started-btn a {
+  color: #fff;
+  text-decoration: none;
+}
 /* Hamburger Icon */
 .menu-icon {
   display: none;
