--- a/client/css/register.css
+++ b/client/css/register.css
@@ -155,3 +155,52 @@ body {
     gap: 0.5em;
   }
 }
+
+/* Additional Responsive Tweak */
+@media (max-width: 768px) {
+  .navbar-container {
+    padding: 0 16px;
+  }
+
+  .navbar-left img {
+    height: 50px;
+  }
+
+  .brand-name {
+    font-size: 1.2rem;
+    margin-left: 10px;
+  }
+
+  .get-started-btn {
+    font-size: 14px;
+    padding: 0.4em 0.9em;
+  }
+
+  .navbar-menu a {
+    font-size: 16px;
+  }
+
+  .navbar-menu .get-started-btn {
+    margin-top: 10px;
+    width: 100%;
+    text-align: center;
+  }
+}
+
+@media (max-width: 480px) {
+  .brand-name {
+    font-size: 1rem;
+  }
+
+  .navbar-left img {
+    height: 45px;
+  }
+
+  .get-started-btn {
+    font-size: 13px;
+  }
+
+  .menu-icon {
+    font-size: 1.8rem;
+  }
+}
