--- a/client/css/services.css
+++ b/client/css/services.css
@@ -10,6 +10,10 @@ body {
   font-family: 'Segoe UI', sans-serif;
   background: #f9f9f9;
 }
+a{
+  text-decoration: none;
+  color: inherit;
+}
 
 /* Toggle Menu Icon */
 .menu-toggle {
@@ -32,7 +36,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
 }
 
@@ -44,20 +48,14 @@ body {
 }
 
 .navbar-left img {
-  width: auto;
-  height: 70px;
-  border-radius: 50%;
+  width: 35%;
+  height: 18%;
   display: flex;
   align-items: center;
   justify-content: center;
   object-fit: cover;
 }
 
-.brand-name {
-  font-size: 1.4rem;
-  font-weight: 600;
-  color: #1e1e2f;
-}
 
 /* Nav Menu */
 .navbar-menu {
@@ -76,7 +74,7 @@ body {
 
 .navbar-menu a:hover,
 .navbar-menu a.active {
-  color: #08389C;
+  color: #1a72b2;
 }
 
 /* Right Section */
@@ -92,34 +90,48 @@ body {
   color: #444;
   font-size: 14px;
 }
+.mobile-contact
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
 
+  gap: 0.5em;
+}
 .get-started-btn {
   padding: 0.5em 1em;
-  background-color: #08389C;
+  background-color: #1a72b2;
   color: #fff;
   border: none;
   border-radius: 6px;
   font-weight: 550;
   cursor: pointer;
   transition: 0.3s;
-  margin-left: 10px;
-}
-
-.get-started-btn:hover {
-  background-color: #fff;
-  color: #2475f7;
+  width: 120px;
 }
 .get-started-btn a {
   color: #fff;
   text-decoration: none;
 }
-
-.service-card a{
+.learn-more a{
+  color: #000000;
   text-decoration: none;
-  color: inherit;
+}
+.learn-more a:hover{
+  color: #ffffff;
+  text-decoration: none;
 }
 
 
+.get-started-btn:hover {
+  background-color: #073278;
+  color: #fff;
+}
+.get-started-btn a:hover{
+  color: #fff;
+  text-decoration: none;
+}
 
 /* Hamburger Icon */
 .menu-icon {
@@ -128,8 +140,9 @@ body {
   cursor: pointer;
 }
 
+
 .hero {
-  background-color: #0047ab;
+  background-color: #1a72b2;
   color: #fff;
   text-align: center;
   padding: 60px 20px 40px;
@@ -255,7 +268,7 @@ body {
 }
 
 .cta {
-  background: #0047ab;
+  background: #1a72b2;
   color: white;
   padding: 60px 20px;
   text-align: center;
@@ -277,7 +290,7 @@ body {
 }
 .cta-buttons a{
   text-decoration: none;
-  color: #0047ab;
+  color: #1a72b2;
 }
 
 .cta-buttons button {
