--- a/client/css/services.css
+++ b/client/css/services.css
@@ -4,6 +4,33 @@
   margin: 0;
   padding: 0;
 }
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 30px;
+  left: 50px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 4px;
+  
+}
+
+#myBtn:hover {
+  background-color: #fff;
+}
+
+#myBtn img{
+  width: 30px;
+  height: 30px;
+  vertical-align: middle;
+}
+
 
 body {
   margin: 0;
@@ -313,7 +340,32 @@ a{
   border: 2px solid white;
 }
 
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 30px;
+  left: 50px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 4px;
+  
+}
 
+#myBtn:hover {
+  background-color: #fff;
+}
+
+#myBtn img{
+  width: 30px;
+  height: 30px;
+  vertical-align: middle;
+}
 
 
 
