--- a/client/css/style.css
+++ b/client/css/style.css
@@ -804,7 +804,32 @@ body {
 
 /* footer */
 
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 30px;
+  left: 50px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 4px;
+  
+}
 
+#myBtn:hover {
+  background-color: #fff;
+}
+
+#myBtn img{
+  width: 30px;
+  height: 30px;
+  vertical-align: middle;
+}
 
 
 /* Mobile Styles */
