--- a/client/css/style.css
+++ b/client/css/style.css
@@ -570,7 +570,7 @@ body {
 /* success-stories  */
 
 .review-slider-section {
-  padding: 40px;
+  padding: 0px 40px;
   background-color: #f9f9f9;
   text-align: center;
 }
@@ -590,7 +590,7 @@ body {
 .review-card {
   min-width: 100%;
   box-sizing: border-box;
-  padding: 20px;
+  padding: 0px;
   background: white;
   border-radius: 10px;
   box-shadow: 0 5px 15px rgba(0,0,0,0.1);
