Update statistics and styling across multiple pages for consistency and improved design

--- a/client/css/about.css
+++ b/client/css/about.css
@@ -295,7 +295,8 @@ body {
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: #007bff;
+  /* background-color: #007bff; */
+  background-color: #25D366;
   color: white;
   cursor: pointer;
   padding: 10px;
