--- a/client/css/contect.css
+++ b/client/css/contect.css
@@ -13,7 +13,8 @@
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: #007bff;
+  /* background-color: #007bff; */
+  background-color: #25D366;
   color: white;
   cursor: pointer;
   padding: 10px;
@@ -328,7 +329,8 @@ body {
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: #007bff;
+  /* background-color: #007bff; */
+  background-color: #25D366;
   color: white;
   cursor: pointer;
   padding: 10px;
