--- a/client/css/services.css
+++ b/client/css/services.css
@@ -13,7 +13,8 @@
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: #007bff;
+  /* background-color: #007bff; */
+  background-color: #25D366;
   color: white;
   cursor: pointer;
   padding: 10px;
@@ -349,7 +350,8 @@ a{
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: #007bff;
+  /* background-color: #007bff; */
+  background-color: #25D366;
   color: white;
   cursor: pointer;
   padding: 10px;
