--- a/client/css/about.css
+++ b/client/css/about.css
@@ -87,8 +87,8 @@ body {
   color: #444;
   font-size: 14px;
 }
-.mobile-contact
-{
+
+.mobile-contact {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -96,6 +96,7 @@ body {
 
   gap: 0.5em;
 }
+
 .get-started-btn {
   padding: 0.5em 1em;
   background-color: #1a72b2;
@@ -107,15 +108,18 @@ body {
   transition: 0.3s;
   width: 120px;
 }
+
 .get-started-btn a {
   color: #fff;
   text-decoration: none;
 }
-.learn-more a{
+
+.learn-more a {
   color: #000000;
   text-decoration: none;
 }
-.learn-more a:hover{
+
+.learn-more a:hover {
   color: #ffffff;
   text-decoration: none;
 }
@@ -125,7 +129,8 @@ body {
   background-color: #073278;
   color: #fff;
 }
-.get-started-btn a:hover{
+
+.get-started-btn a:hover {
   color: #fff;
   text-decoration: none;
 }
@@ -237,7 +242,7 @@ body {
   border-radius: 10px;
   padding: 20px;
   width: 260px;
-  box-shadow: 0 0 12px rgba(0,0,0,0.05);
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.05);
 }
 
 .value-box img {
@@ -268,7 +273,7 @@ body {
 .experience-image img {
   max-width: 100%;
   border-radius: 10px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.1);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
 .experience-text {
@@ -301,14 +306,14 @@ body {
   cursor: pointer;
   padding: 10px;
   border-radius: 4px;
-  
+
 }
 
 #myBtn:hover {
   background-color: #fff;
 }
 
-#myBtn img{
+#myBtn img {
   width: 30px;
   height: 30px;
   vertical-align: middle;
@@ -361,13 +366,16 @@ body {
   .experience-text h2 {
     font-size: 22px;
   }
+
   .menu-icon {
     display: block;
   }
+
   .navbar-menu {
     display: none;
     flex-direction: column;
   }
+
   .navbar-menu.show {
     display: flex;
   }
@@ -386,10 +394,12 @@ body {
   .menu-icon {
     display: block;
   }
+
   .navbar-menu {
     display: none;
     flex-direction: column;
   }
+
   .navbar-menu.show {
     display: flex;
   }
