--- a/client/css/register.css
+++ b/client/css/register.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
 }
+
 #myBtn {
   display: none;
   position: fixed;
@@ -19,14 +20,14 @@
   cursor: pointer;
   padding: 10px;
   border-radius: 4px;
-  
+
 }
 
 #myBtn:hover {
   background-color: #fff;
 }
 
-#myBtn img{
+#myBtn img {
   width: 30px;
   height: 30px;
   vertical-align: middle;
@@ -114,8 +115,8 @@ body {
   color: #444;
   font-size: 14px;
 }
-.mobile-contact
-{
+
+.mobile-contact {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -123,6 +124,7 @@ body {
 
   gap: 0.5em;
 }
+
 .get-started-btn {
   padding: 0.5em 1em;
   background-color: #1a72b2;
@@ -134,15 +136,18 @@ body {
   transition: 0.3s;
   width: 120px;
 }
+
 .get-started-btn a {
   color: #fff;
   text-decoration: none;
 }
-.learn-more a{
+
+.learn-more a {
   color: #000000;
   text-decoration: none;
 }
-.learn-more a:hover{
+
+.learn-more a:hover {
   color: #ffffff;
   text-decoration: none;
 }
@@ -152,7 +157,8 @@ body {
   background-color: #073278;
   color: #fff;
 }
-.get-started-btn a:hover{
+
+.get-started-btn a:hover {
   color: #fff;
   text-decoration: none;
 }
